[package]
name = "ars-malakia"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0-beta.0"
crossterm = "0.29"
color-eyre = "0.6.3"
better-panic = "0.3.0"
csscolorparser = "0.6"
anyhow = "1.0"
ropey = "1.6"
rust-embed = { version = "8.7", features = ["include-exclude"] }
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
unicode-width = "=0.2.0"
unicode-segmentation = "1.11"
arboard = { version = "3.5", default-features = false }
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-yaml = "0.7.1"
tree-sitter-json = "0.24.8"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-bash = "0.25.0"
tree-sitter-md = "0.3.2"
ratatui-code-editor = "0.0.1"
itertools = "0.14.0"
indoc = "2.0.7"
ratatui-garnish = "0.1.0"
